--- a/Velentr.Collisions.FNA/Velentr.Collisions.FNA.csproj
+++ b/Velentr.Collisions.FNA/Velentr.Collisions.FNA.csproj
@@ -11,13 +11,12 @@
     <PackageProjectUrl>https://github.com/vonderborch/Velentr.Collisions</PackageProjectUrl>
     <Description>A simple and easy-to-use collision detection library.</Description>
     <PackageTags>Collision Detection, FNA</PackageTags>
-    <Version>1.1.0</Version>
+    <Version>1.2.0</Version>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
-    <AllowUnsafeBlocks>true</AllowUnsafeBlocks>
-    <DocumentationFile>C:\Users\ricky\OneDrive\repos\BragiFont\BragiFont.FNA\BragiFont.FNA.xml</DocumentationFile>
-    <DefineConstants>TRACE;FNA</DefineConstants>
+    <DefineConstants>TRACE;CORE</DefineConstants>
+    <OutputPath>..\release\FNA</OutputPath>
   </PropertyGroup>
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Debug|AnyCPU'">
@@ -32,10 +31,6 @@
 
   <ItemGroup>
     <PackageReference Include="fnalibs" Version="21.3.5" />
-    <PackageReference Include="SharpFont.Dependencies" Version="2.6.0" />
-    <PackageReference Include="SharpFont.NetStandard" Version="1.0.2" />
-    <PackageReference Include="System.Drawing.Common" Version="5.0.2" />
-    <PackageReference Include="Velentr.Collections" Version="1.0.1" />
   </ItemGroup>
 
   <ItemGroup>
@@ -84,24 +79,32 @@
     <Compile Include="..\Velentr.Collisions\Conditions\CircleVsRectangleCondition.cs" Link="Conditions\CircleVsRectangleCondition.cs" />
     <Compile Include="..\Velentr.Collisions\Conditions\CollisionCondition.cs" Link="Conditions\CollisionCondition.cs" />
     <Compile Include="..\Velentr.Collisions\Conditions\CollisionTestingMode.cs" Link="Conditions\CollisionTestingMode.cs" />
+    <Compile Include="..\Velentr.Collisions\Conditions\PixelRectangleVsCircleCondition.cs" Link="Conditions\PixelRectangleVsCircleCondition.cs" />
+    <Compile Include="..\Velentr.Collisions\Conditions\PixelRectangleVsPixelRectangleCondition.cs" Link="Conditions\PixelRectangleVsPixelRectangleCondition.cs" />
+    <Compile Include="..\Velentr.Collisions\Conditions\PixelRectangleVsPointCondition.cs" Link="Conditions\PixelRectangleVsPointCondition.cs" />
+    <Compile Include="..\Velentr.Collisions\Conditions\PixelRectangleVsRectangleCondition.cs" Link="Conditions\PixelRectangleVsRectangleCondition.cs" />
     <Compile Include="..\Velentr.Collisions\Conditions\PointVsPoint.cs" Link="Conditions\PointVsPoint.cs" />
     <Compile Include="..\Velentr.Collisions\Conditions\RectangleVsPointCondition.cs" Link="Conditions\RectangleVsPointCondition.cs" />
     <Compile Include="..\Velentr.Collisions\Conditions\RectangleVsRectangleCondition.cs" Link="Conditions\RectangleVsRectangleCondition.cs" />
+    <Compile Include="..\Velentr.Collisions\Helpers\ColorHelpers.cs" Link="Helpers\ColorHelpers.cs" />
     <Compile Include="..\Velentr.Collisions\Helpers\Math.cs" Link="Helpers\Math.cs" />
+    <Compile Include="..\Velentr.Collisions\Helpers\ShapeHelpers.cs" Link="Helpers\ShapeHelpers.cs" />
     <Compile Include="..\Velentr.Collisions\ShapeDefinitions\CircleDefinition.cs" Link="ShapeDefinitions\CircleDefinition.cs" />
+    <Compile Include="..\Velentr.Collisions\ShapeDefinitions\Color.cs" Link="ShapeDefinitions\Color.cs" />
+    <Compile Include="..\Velentr.Collisions\ShapeDefinitions\PixelRectangleDefinition.cs" Link="ShapeDefinitions\PixelRectangleDefinition.cs" />
     <Compile Include="..\Velentr.Collisions\ShapeDefinitions\PointDefinition.cs" Link="ShapeDefinitions\PointDefinition.cs" />
     <Compile Include="..\Velentr.Collisions\ShapeDefinitions\RectangleDefinition.cs" Link="ShapeDefinitions\RectangleDefinition.cs" />
     <Compile Include="..\Velentr.Collisions\ShapeDefinitions\Shape.cs" Link="ShapeDefinitions\Shape.cs" />
     <Compile Include="..\Velentr.Collisions\ShapeDefinitions\ShapeDefinition.cs" Link="ShapeDefinitions\ShapeDefinition.cs" />
     <Compile Include="..\Velentr.Collisions\Shapes\Circle.cs" Link="Shapes\Circle.cs" />
     <Compile Include="..\Velentr.Collisions\Shapes\IShape.cs" Link="Shapes\IShape.cs" />
+    <Compile Include="..\Velentr.Collisions\Shapes\PixelRectangle.cs" Link="Shapes\PixelRectangle.cs" />
     <Compile Include="..\Velentr.Collisions\Shapes\Point.cs" Link="Shapes\Point.cs" />
     <Compile Include="..\Velentr.Collisions\Shapes\Rectangle.cs" Link="Shapes\Rectangle.cs" />
   </ItemGroup>
 
   <ItemGroup>
     <Folder Include="Conditions\" />
-    <Folder Include="Helpers\" />
     <Folder Include="ShapeDefinitions\" />
     <Folder Include="Shapes\" />
   </ItemGroup>
