--- a/Velentr.Collisions/Velentr.Collisions.csproj
+++ b/Velentr.Collisions/Velentr.Collisions.csproj
@@ -1,4 +1,4 @@
-<Project Sdk="Microsoft.NET.Sdk">
+﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
     <TargetFramework>netstandard2.0</TargetFramework>
@@ -9,7 +9,7 @@
     <RepositoryUrl>https://github.com/vonderborch/Velentr.Collisions</RepositoryUrl>
     <PackageTags>Collision Detection</PackageTags>
     <Description>A simple and easy-to-use collision detection library.</Description>
-    <Version>1.1.0</Version>
+    <Version>1.2.0</Version>
     <PackageProjectUrl>https://github.com/vonderborch/Velentr.Collisions</PackageProjectUrl>
   </PropertyGroup>
 
@@ -19,6 +19,7 @@
 
   <PropertyGroup Condition="'$(Configuration)|$(Platform)'=='Release|AnyCPU'">
     <DefineConstants>TRACE;CORE</DefineConstants>
+    <OutputPath>..\release\core</OutputPath>
   </PropertyGroup>
 
   <ItemGroup>
